
=== Beats version HEAD
https://github.com/elastic/beats/compare/1.0.0...master[Check the HEAD diff]

==== Breaking changes

*Affecting all Beats*

*Packetbeat*

*Topbeat*

*Filebeat*

*Winlogbeat*


==== Bugfixes

*Affecting all Beats*

*Packetbeat*
- Fix setting direction to out and use its value to decide when dropping events if ignore_outgoing is enabled {pull}557[557]

*Topbeat*

*Filebeat*

*Winlogbeat*


==== Added

*Affecting all Beats*

*Packetbeat*

*Topbeat*
- group all cpu usage per core statistics and export them optionally if cpu_per_core is configured {pull}496[496]

*Filebeat*

*Winlogbeat*


==== Deprecated

*Affecting all Beats*

*Packetbeat*

*Topbeat*

*Filebeat*

*Winlogbeat*

////////////////////////////////////////////////////////////

[[release-notes-1.0.1]]
=== Beats version 1.0.1 https://github.com/elastic/beats/compare/1.0.0...1.0.1[Check 1.0.1 diff]

==== Bugfixes

*Affecting all Beats*

- Reduced the output bulk size default from 10k to 200. This avoids high
  memory usage in case Logstash is not available or slow to process request. {pull}550[550]

*Filebeat*

- Fix force_close_files in case renamed file appeared very fast. https://github.com/elastic/filebeat/pull/302[302]

*Packetbeat*

- Improve MongoDB message correlation. {issue}377[377]
- Improve redis parser performance. {issue}442[422]
- Fix panic on nil in redis protocol parser. {issue}384[384]
- Fix errors redis parser when messages are split in multiple TCP segments. {issue}402[402]
- Fix errors in redis parser when length prefixed strings contain sequences of CRLF. {issue}#402[402]
- Fix errors in redis parser when dealing with nested arrays. {issue}402[402]

[[release-notes-1.0.0]]
=== Beats version 1.0.0
https://github.com/elastic/beats/compare/1.0.0-rc2...1.0.0[Check 1.0.0 diff]

==== Breaking changes

*Topbeat*

- Change proc type to process #138


==== Bugfixes

*Affecting all Beats*
